# Futures

./: .gitignore  00.Test.ipynb  00.getContent.ipynb  00.getURLs.ipynb  01.ChromaDB.ipynb  01.CreateDB.ipynb  01.Process.ipynb  02.Cleaning.ipynb  02.DBs.ipynb  03.Drafts.ipynb  03.GetSeeds.ipynb  05.ReadSeeds.ipynb  06.CreatePages.ipynb  DU.md  README.md  articles.csv  articles.parquet.gzip  categories.csv  d2.ipynb  db.py  dolls.txt  example.ipynb  explore.ipynb  fcts.py  grouped_articles.csv  helpers.py  helpers_nonllm.py  metatags.parquet.gzip  pages.py  pyproject.toml  requirements.txt  run.sh  run_all.py  run_all.sh  signals.parquet.gzip  test.ipynb  titles.parquet.gzip  to_process_selenium.parquet.gzip  urls.parquet.gzip  writers.py  (+1 more)
.cache/: 20220626  20220711  20220717  20220721  20220810  20220824  20220828  20220904  20220917  20220922  20221002  20221012  20221016  20221031  20221106  20221117  20221127  20221204  20221210  borges-babel-movies-a-short-story
app/: agents.py  agents_test.ipynb  app.py  chainlit.md  dbclass.py  pp.py  requirements.txt
data/: .embedding.langchain.db  .gitignore  .langchain.db  2025.json  categories_ax.json  metas.parquet.gzip  metatags.parquet.gzip  mrg_behav.parquet.gzip  mrg_concern.parquet.gzip  mrg_issue.parquet.gzip  mrg_tech.parquet.gzip  pages_metatags_with_closest.parquet.gzip  seeds.parquet.gzip  signals.parquet.gzip  stories.parquet.gzip  summaries.parquet.gzip  titles.parquet.gzip  to_process_selenium.parquet.gzip  urls.parquet.gzip  weaksignals_v2.parquet.gzip
docs/: CNAME  index.md
drafts/: 20241208.md  (+56 more)
(+246 files in other folders)
