[tool.poetry]
name = "futures"
version = "0.1.0"
description = ""
authors = ["Luc J <kelu124@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.19"
chainlit = "^2.2.1"
streamlit = "^1.42.1"
fastapi = "^0.115.8"
pandas = "^2.2.3"
beautifulsoup4 = "^4.13.3"
chromadb = "^0.6.3"
ipython = "^8.32.0"
langchain-community = "^0.3.17"
langchain-core = "^0.3.36"
langchain-openai = "^0.3.6"
openpyxl = "^3.1.5"
pyarrow = "^19.0.1"
python-docx = "^1.1.2"
python-dotenv = "^1.0.1"
jupyter-core = "^5.7.2"
jupyter-client = "^8.6.3"
ipykernel = "^6.29.5"
trafilatura = "^2.0.0"
langchain-chroma = "^0.2.2"
tabulate = "^0.9.0"
lark = "^1.2.2"
faiss-cpu = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
